<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/shape_background_login">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="56dp"
        app:cardBackgroundColor="@android:color/transparent"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">




            <androidx.cardview.widget.CardView
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:cardCornerRadius="50dp"
                app:cardBackgroundColor="@android:color/transparent"
                android:elevation="8dp">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/chopsic"
                    android:text="G"
                    android:textColor="@color/white"
                    android:textSize="80sp"/>




            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastro"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:layout_margin="16dp"
                android:textStyle="bold"/>

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_login"
                android:background="@color/purple_200"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:hint="@string/Nome_Apelido"
                android:id="@+id/nome_apelido"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_login"
                android:background="@color/purple_200"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/Email"
                android:id="@+id/email_cadastro"
                android:layout_marginBottom="10dp"/>


            <com.google.android.material.textfield.TextInputEditText
                style="@style/edit_text_login"
                android:background="@color/purple_200"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:hint="@string/senha"
                android:id="@+id/senha_cadastro"/>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/criar_conta"
                android:id="@+id/docadastroprologin"
                android:textColor="@color/purple_200"
                android:textStyle="bold"
                android:layout_margin="32dp"
                android:background="@drawable/shape_button"/>





        </LinearLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>